$Id$

	DE CRONTAB STAAT UIT !!!!

v0.61.2		11-Jul-2004

	upgrade:
		Make sure that /opt/mbse/queue is empty, then close the
		bbs with "mbstat close wait". Then do the upgrade.

	general:
		Added -fno-strict-aliasing switch to gcc to prevent some
		warnings.

	libmbse.a:
		Added logging for obsolete .tic files in .flo files.
		When files are attached that should "leave" after sent (not
		truncated or removed) they are now prepended with the @
		character instead of no character. This is compatible with
		ifcico but not with other mailers, but should do no harm 
		because most mailers only look for the ^ and # characters.
		This is for test! Please check if you run mbcico together
		with other mailers. Russell??
		If you only use mbcico there will be no problems.

	mbcico:
		In the binkp driver, when files were found to transmit and
		didn't exist anymore, they are not added to the list of files
		to sent but are marked as already transmitted so they will
		be removed from the .flo file. Also, after a successfull
		session .flo files with all files marked as transmitted are
		removed. With nodes that were marked crash, this will prevent
		continuous calling.
		Changed to use direct instead of immediate mail.

	mbfido:
		Added code to un_attach files during tic import that are
		deleted from the system by replace, or keep # magic actions,
		but also for files with the same name that are replaced.
		Currently tested: duplicate names - works.
				  keep #          - works.
				  replace	  -
		Removed debug logging from toberep function since all problems
		seems solved.
		In rfc2ftn added check for ".\n" to change to " .\n" instead of
		only check for ".\r\n".

	mbout:
		Changed to use direct instead of immediate mail.

	mbaff:
		In newfiles and filefind reports with the tty info lines, also
		display TCP/IP connection details.

	mbsetup:
		In menu 2, added 3 checks to see if enough info is entered to
		make a valid network setup.