@@ -7,6 +7,9 @@ v0.61.2		11-Jul-2004
 	upgrade:
 		Make sure that /opt/mbse/queue is empty, then close the
 		bbs with "mbstat close wait". Then do the upgrade.
+		In mbsetup menu 1.14 update the TCP/IP connection details.
+		In the examples directory type "make macros" to update the
+		macro templates. Be carefull if you have personalized versions.
 
 	general:
 		Added -fno-strict-aliasing switch to gcc to prevent some
@@ -60,6 +63,9 @@ v0.61.2		11-Jul-2004
 
 	mbtask:
 		Changed to use direct instead of immediate mail.
+
+	examples:
+		Changed the macro templates for filefind and newfiles.
 
 	script:
 		Fixed NetBSD init script reload command.
